Fix notification option icon on mobile

--- a/github-dark.css
+++ b/github-dark.css
@@ -22,6 +22,9 @@
   .CircleBadge {
     background: #181818;
   }
+  body[class="page-responsive"] .list-options .list-item > .octicon {
+    color: #181818;
+  }
   /* begin auto-generated rules - use tools/generate.js to generate them */
   /* auto-generated rule for "background: #fff" */
   image-crop .handle:before, .pagination a, .pagination em, .pagination span,
